Showcase: Fix overflow issue in left sidebar.
Props umesh84
Fixes: #6357

git-svn-id: https://meta.svn.wordpress.org/sites/trunk@11912 74240141-8908-4e6f-9713-ba540dce6ec7

--- a/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
+++ b/wordpress.org/public_html/wp-content/themes/pub/wporg-showcase/style.css
@@ -871,7 +871,7 @@ a.wpsc-hero-learnmore {
 	.leftsidebar {
 		background: #fff;
 		border: 1px #DFDFDF solid;
-		height: 100%;
+		height: auto;
 		margin-left: -210px;
 		margin-top: -1px;
 		min-height: 100vh;
